rust/pattern_c.rs

extern "C" {
    #[doc = " \\ingroup FiftyOneDegreesFunctions"]
    #[doc = " Passed a string where each line contains the HTTP header name and value."]
    #[doc = " The first space character and/or colon seperates the HTTP header name"]
    #[doc = " at the beginning of the line and the value. Does not perform a device"]
    #[doc = " detection. Use fiftyoneDegreesMatchForHttpHeaders to complete a match."]
    #[doc = " @param ws pointer to a work set to have important headers set"]
    #[doc = " @param httpHeaders is a list of HTTP headers and values on each line"]
    #[doc = " @param length number of characters in the headers array to consider"]
    pub fn fiftyoneDegreesSetHttpHeaders(
        ws: *mut fiftyoneDegreesWorkset,
        httpHeaders: *const ::std::os::raw::c_char,
        length: usize,
    ) -> i32;
}
extern "C" {
    #[doc = " \\ingroup FiftyOneDegreesFunctions"]
    #[doc = " Sets the workset for the important headers included in the workset."]
    #[doc = " @param ws pointer to a work set to be used for the match created via"]
    #[doc = "        createWorkset function"]
    pub fn fiftyoneDegreesMatchForHttpHeaders(ws: *mut fiftyoneDegreesWorkset);
}
extern "C" {
    #[doc = " \\ingroup FiftyOneDegreesFunctions"]
    #[doc = " Sets the values associated with the require property index in the workset"]
    #[doc = " so that an array of values can be read."]
    #[doc = " @param ws pointer to the work set associated with the match"]
    #[doc = " @param requiredPropertyIndex index of the property required from the array of"]
    #[doc = "        require properties"]
    #[doc = " @return the number of values that were set."]
    pub fn fiftyoneDegreesSetValues(
        ws: *mut fiftyoneDegreesWorkset,
        requiredPropertyIndex: i32,
    ) -> i32;
}
extern "C" {
    #[doc = " \\ingroup FiftyOneDegreesFunctions"]
    #[doc = " Returns a pointer to the ascii string at the byte offset provided"]
    #[doc = " @param dataSet pointer to the data set"]
    #[doc = " @param offset to the ascii string required"]
    #[doc = " @return a pointer to the AsciiString at the offset"]
    pub fn fiftyoneDegreesGetString(
        dataSet: *const fiftyoneDegreesDataSet,
        offset: i32,
    ) -> *const fiftyoneDegreesAsciiString;
}
extern "C" {
    #[doc = " \\ingroup FiftyOneDegreesFunctions"]
    #[doc = " Sets the values character array to the values of the required property"]
    #[doc = " provided. If the values character array is too small then only the values"]
    #[doc = " that can be fitted in are added."]
    #[doc = " @param ws pointer to a workset configured with the match results"]
    #[doc = " @param requiredPropertyIndex index of the required property"]
    #[doc = " @param values pointer to allocated memory to store the values"]
    #[doc = " @param size the size of the values memory"]
    #[doc = " @return the number of characters written to the values memory"]
    pub fn fiftyoneDegreesGetValues(
        ws: *mut fiftyoneDegreesWorkset,
        requiredPropertyIndex: i32,
        values: *mut ::std::os::raw::c_char,
        size: i32,
    ) -> i32;
}
extern "C" {
    #[doc = " \\ingroup FiftyOneDegreesFunctions"]
    #[doc = " Returns the name of the value provided."]
    #[doc = " @param dataSet pointer to the data set containing the value"]
    #[doc = " @param value pointer whose name is required"]
    #[doc = " @return pointer to the char string of the name"]
    pub fn fiftyoneDegreesGetValueName(
        dataSet: *const fiftyoneDegreesDataSet,
        value: *const fiftyoneDegreesValue,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    #[doc = " \\ingroup FiftyOneDegreesFunctions"]
    #[doc = " Returns the name of the property provided."]
    #[doc = " @param dataSet pointer to the data set containing the property"]
    #[doc = " @param property pointer whose name is required"]
    #[doc = " @return pointer to the char string of the name"]
    pub fn fiftyoneDegreesGetPropertyName(
        dataSet: *const fiftyoneDegreesDataSet,
        property: *const fiftyoneDegreesProperty,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    #[doc = " \\ingroup FiftyOneDegreesFunctions"]
    #[doc = " Returns whether or not the property is a list property or not as an integer"]
    #[doc = " i.e. 1=true 0=false, or -1 if the property cannot be found."]
    #[doc = " @param dataSet pointer to an initialised dataset."]
    #[doc = " @param propertyName pointer to the name of the property required."]
    #[doc = " @return 1 if the property can return a list, 0 if not, or -1 if the property"]
    #[doc = "         does not exist."]
    pub fn fiftyoneDegreesGetPropertyIsList(
        dataSet: *const fiftyoneDegreesDataSet,
        propertyName: *mut ::std::os::raw::c_char,
    ) -> i32;
}
extern "C" {
    #[doc = " \\ingroup FiftyOneDegreesFunctions"]
    #[doc = " Gets the required property name at the index provided."]
    #[doc = " @param dataset pointer to an initialised dataset"]
    #[doc = " @param index of the property required"]
    #[doc = " @param propertyName pointer to memory to place the property name"]
    #[doc = " @param size of the memory allocated for the name"]
    #[doc = " @return the number of bytes written for the property"]
    pub fn fiftyoneDegreesGetRequiredPropertyName(
        dataSet: *const fiftyoneDegreesDataSet,
        requiredPropertyIndex: ::std::os::raw::c_int,
        propertyName: *mut ::std::os::raw::c_char,
        size: ::std::os::raw::c_int,
    ) -> i32;
}
extern "C" {
    #[doc = " \\ingroup FiftyOneDegreesFunctions"]
    #[doc = " Gets the http header name at the index provided."]
    #[doc = " @param dataset pointer to an initialised dataset"]
    #[doc = " @param index of the http header required"]
    #[doc = " @param httpHeader pointer to memory to place the http header name"]
    #[doc = " @param size of the memory allocated for the name"]
    #[doc = " @return the number of bytes written for the http header"]
    pub fn fiftyoneDegreesGetHttpHeaderName(
        dataSet: *const fiftyoneDegreesDataSet,
        httpHeaderIndex: ::std::os::raw::c_int,
        httpHeader: *mut ::std::os::raw::c_char,
        size: ::std::os::raw::c_int,
    ) -> i32;
}
extern "C" {
    #[doc = " \\ingroup FiftyOneDegreesFunctions"]
    #[doc = " Returns the name of the header in prefixed upper case form at the index"]
    #[doc = " provided, or NULL if the index is not valid."]
    #[doc = " @param dataSet pointer to an initialised dataset"]
    #[doc = " @param httpHeaderIndex index of the HTTP header name required"]
    #[doc = " @returns name of the header, or NULL if index not valid"]
    pub fn fiftyoneDegreesGetPrefixedUpperHttpHeaderName(
        dataSet: *const fiftyoneDegreesDataSet,
        httpHeaderIndex: ::std::os::raw::c_int,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    #[doc = " \\ingroup FiftyOneDegreesFunctions"]
    #[doc = " Gets the required property index of the property provided, or -1 if the"]
    #[doc = " property is not available in the dataset."]
    #[doc = " @param dataset pointer to an initialised dataset"]
    #[doc = " @param propertyName pointer to the name of the property required"]
    #[doc = " @return the index of the property, or -1 if the property does not exist"]
    pub fn fiftyoneDegreesGetRequiredPropertyIndex(
        dataSet: *const fiftyoneDegreesDataSet,
        propertyName: *const ::std::os::raw::c_char,
    ) -> i32;
}
extern "C" {
    #[doc = " \\ingroup FiftyOneDegreesFunctions"]
    #[doc = " Process the workset results into a CSV string."]
    #[doc = " @param ws pointer to a workset with the results to return in CSV"]
    #[doc = " @param csv pointer to memory allocated with fiftyoneDegreesCSVCreate"]
    pub fn fiftyoneDegreesProcessDeviceCSV(
        ws: *mut fiftyoneDegreesWorkset,
        csv: *mut ::std::os::raw::c_char,
    ) -> i32;
}
extern "C" {
    #[doc = " \\ingroup FiftyOneDegreesFunctions"]
    #[doc = " Process the workset results into a JSON string."]
    #[doc = " @param ws pointer to a workset with the results to return in JSON"]
    #[doc = " @param json pointer to memory allocated with fiftyoneDegreesJSONCreate"]
    pub fn fiftyoneDegreesProcessDeviceJSON(
        ws: *mut fiftyoneDegreesWorkset,
        json: *mut ::std::os::raw::c_char,
    ) -> i32;
}
extern "C" {
    #[doc = " \\ingroup FiftyOneDegreesFunctions"]
    #[doc = " Returns the rank of the signature set in the workset."]
    #[doc = " @param ws pointer to the work set associated with the match"]
    #[doc = " @returns the rank of the signature if available, or INT_MAX"]
    pub fn fiftyoneDegreesGetSignatureRank(ws: *mut fiftyoneDegreesWorkset) -> i32;
}
extern "C" {
    #[doc = " \\ingroup FiftyOneDegreesFunctions"]
    #[doc = " Gets the signature as a string representing relevent user agent characters."]
    #[doc = " @param ws pointer to the work set associated with the match"]
    #[doc = " @param signatureAsString pointer to memory to place the signature"]
    #[doc = " @param size of the memory allocated for the signature"]
    #[doc = " @return the number of bytes written for the signature"]
    pub fn fiftyoneDegreesGetSignatureAsString(
        ws: *mut fiftyoneDegreesWorkset,
        signatureAsString: *mut ::std::os::raw::c_char,
        size: ::std::os::raw::c_int,
    ) -> i32;
}
extern "C" {
    #[doc = " \\ingroup FiftyOneDegreesFunctions"]
    #[doc = " Gets the device id as a string."]
    #[doc = " @param ws pointer to the work set associated with the match"]
    #[doc = " @param deviceId pointer to memory to place the device id"]
    #[doc = " @param size of the memory allocated for the device id"]
    #[doc = " @return the number of bytes written for the device id"]
    pub fn fiftyoneDegreesGetDeviceId(
        ws: *mut fiftyoneDegreesWorkset,
        deviceId: *mut ::std::os::raw::c_char,
        size: ::std::os::raw::c_int,
    ) -> i32;
}
extern "C" {
    #[doc = " \\ingroup FiftyOneDegreesFunctions"]
    #[doc = " Sets the workset for the device Id provided."]
    #[doc = " @param ws pointer to the work set associated with the match."]
    #[doc = " @param deviceId string representation of the device id to use for the match."]
    pub fn fiftyoneDegreesMatchForDeviceId(
        ws: *mut fiftyoneDegreesWorkset,
        deviceId: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    #[doc = " \\ingroup FiftyOneDegreesFunctions"]
    #[doc = " Gets all the profiles within the data set"]
    #[doc = " that relate to the supplied property value pair."]
    #[doc = " @param dataSet pointer to a 51Degrees data set."]
    #[doc = " @param propertyName the name of the property to match as a string."]
    #[doc = " @param valueName the name of the property's value to match as a string."]
    #[doc = " @param profilesList a pointer to the profiles structure to filter."]
    #[doc = " @returns fiftyoneDegreesProfilesStruct* pointer to a profiles structure."]
    pub fn fiftyoneDegreesFindProfiles(
        dataSet: *const fiftyoneDegreesDataSet,
        propertyName: *const ::std::os::raw::c_char,
        valueName: *const ::std::os::raw::c_char,
    ) -> *mut fiftyoneDegreesProfilesStruct;
}
